Assignment-01 some changes made in tribute.css file

--- a/Daily Assignments/Assignment-01/tribute.css
+++ b/Daily Assignments/Assignment-01/tribute.css
@@ -105,6 +105,11 @@ body {
     width: 95%;
   }
 
+  .heading {
+    font-size: 1rem;
+    /* background-color: orange; */
+  }
+
   .jim-container {
     /* background-color: olive; */
     padding: 3px;
