--- a/Daily Assignments/Assignment-01/tribute.css
+++ b/Daily Assignments/Assignment-01/tribute.css
@@ -106,7 +106,7 @@ body {
   }
 
   .heading {
-    font-size: 1rem;
+    font-size: 1.2rem;
     /* background-color: orange; */
   }
 
@@ -119,10 +119,14 @@ body {
   }
 
   .image-container {
-    /* background-color: aqua; */
+    background-color: aqua;
     padding: 1rem;
-    width: 60%;
+    width: 70%;
     margin: auto;
+  }
+
+  .quote {
+    font-size: 1.5rem;
   }
 
   .about-person {
