Changes made in Assignment-01 styling

--- a/Daily Assignments/Assignment-01/tribute.css
+++ b/Daily Assignments/Assignment-01/tribute.css
@@ -119,7 +119,7 @@ body {
   }
 
   .image-container {
-    background-color: aqua;
+    /* background-color: aqua; */
     padding: 1rem;
     width: 70%;
     margin: auto;
